@@ -1,4 +1,4 @@
-.TH LESSECHO 1 "Version 406: 19 Jun 2007"
+.TH LESSECHO 1 "Version 408: 01 Oct 2007"
 .SH NAME
 lessecho \- expand metacharacters
 .SH SYNOPSIS
